# cneuromod.all

./: .gitattributes  .gitmodules  .readthedocs.yaml  BIDS.md  CLAUDE.md  DATS.json  DOWNLOADING.md  FMRIPREP.md  PHYSPREP.md  README.md  TIMESERIES.md
.datalad/: config
analysis/: run_statistics.sh
anat/: CITATION.cff  README.md  SMRIPREP.md  contributors.json
docs/: .gitignore  README.md  pyproject.toml  requirements.txt  schema.json  update_dataset_stats.py
docs/source/: ACKNOWLEDGMENT.md  HOWTOCITE.rst  OVERVIEW.rst  REFERENCES.rst  cneuromod_references.bib  cneuromod_references.json  conf.py  index.rst
docs/source/_ext/: constants.py  discovery.py  handlers.py  renderers.py  validator.py
docs/source/_static/: custom.css
docs/source/components/: access.md  fmriprep.md
docs/source/contents/: access.md  bids.md  components.rst  datasets.rst  downloading.md  mri.md  participants.md  physprep.md  prf.md  rois.md  scenes.md  smriprep.md  timeseries.md  training.md
docs/source/datasets/: anat.md  hcptrt.md
docs/tests/: conftest.py  test_discovery.py  test_renderers.py  test_validator.py
emotion-videos/: dataset_info.yaml
floc/: CITATION.cff  README.md  ROIS.md  contributors.json  dataset_info.yaml
friends/: CITATION.cff  README.md  contributors.json  dataset_info.yaml
gamepad/: CITATION.cff  README.md  contributors.json  dataset_info.yaml
harrypotter/: CITATION.cff  README.md  contributors.json  dataset_info.yaml
hcptrt/: CITATION.cff  README.md  contributors.json  dataset_info.yaml
hearing/: dataset_info.yaml
mario/: CITATION.cff  (+6 more)
(+29 files in other folders)
