[project]
name = "cneuromod-docs"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "sphinx>=8.0",
    "sphinx-rtd-theme>=2.0",
    "myst-parser>=3.0",
    "pyyaml>=6.0",
    "jsonschema>=4.0",
    "sphinxcontrib-bibtex>=2.6.5",
]

[project.optional-dependencies]
pybids = ["pybids>=0.17"]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
