[project]
name = "cneuromod-docs"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "sphinx>=8.0",
    "furo",
    "myst-parser>=3.0",
    "pyyaml>=6.0",
    "jsonschema>=4.0",
    "sphinxcontrib-bibtex>=2.6.5",
    "tabulate",
    "wcwidth",
]

[project.optional-dependencies]
pybids = ["pybids>=0.17"]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
